# cpp-opencv-image-processing

./: .gitignore  README.md
cpp-opencv/: CMakeLists.txt
cpp-opencv/cpp-opencv/: CMakeLists.txt
cpp-opencv/cpp-opencv/include/: header.hpp
cpp-opencv/cpp-opencv/src/: image_scanner.cpp  main.cpp
